<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sport_name" translatable="false">Bowling</string>
    <string name="context_names" translatable="false">Bowling</string>
    <string name="tournament_manager_package" translatable="false">TournamentManagerPackage</string>
    <string name="title_activity_main" translatable="false">Bowling Main Activity</string>

    <string name="package_name" translatable="false">fit.cvut.org.cz.bowling</string>
    <string name="activity_create_competition" translatable="false">fit.cvut.org.cz.bowling.presentation.activities.CreateCompetitionActivity</string>
    <string name="activity_detail_competition" translatable="false">fit.cvut.org.cz.bowling.presentation.activities.ShowCompetitionActivity</string>

    <string name="match_same_participants_error" tools:ignore="MissingTranslation" translatable="false">Home and away teams cannot be same!</string>

    <string name="generate_by_goals"  tools:ignore="MissingTranslation">Generate by goals</string>
    <string name="generate_by_score" tools:ignore="MissingTranslation">Generate by score</string>
    <string name="generate_by_wins" tools:ignore="MissingTranslation">Generate by wins</string>
    <string name="generate_by_team_points" tools:ignore="MissingTranslation">Generate by team points</string>
    <string name="generate_by_lanes" tools:ignore="MissingTranslation">Generate by lane</string>
    <string name="generate_matches" tools:ignore="MissingTranslation">Generate matches</string>
    <string name="wrong_lanes">Number of lanes cant be more then number of players.</string>

    <string name="enter_number_of_lanes">Enter number of lanes</string>

    <string name="type_none">None</string>

    <string name="gp" tools:ignore="MissingTranslation" translatable="false">GP</string>
    <string name="w" tools:ignore="MissingTranslation" translatable="false">W</string>
    <string name="l" tools:ignore="MissingTranslation">L</string>
    <string name="d" tools:ignore="MissingTranslation" translatable="false">D</string>

    <string name="g" tools:ignore="MissingTranslation" translatable="false">G</string>
    <string name="st" tools:ignore="MissingTranslation" translatable="false">St</string>
    <string name="legend_ST">St: Strikes</string>
    <string name="strikes">Strikes</string>

    <string name="a" tools:ignore="MissingTranslation" translatable="false">A</string>
    <string name="sp">Sp</string>
    <string name="legend_SPA">Sp: Spares</string>
    <string name="spares">Spares</string>

    <string name="pt" tools:ignore="MissingTranslation" translatable="false">Pt</string>
    <string name="legend_PT">Pt: Points</string>
    <string name="points">Points</string>

    <string name="p" tools:ignore="MissingTranslation" translatable="false">P</string>
    <string name="pmp" tools:ignore="MissingTranslation" translatable="false">+/-</string>

    <string name="ag" tools:ignore="MissingTranslation" translatable="false">Avg. G</string>
    <string name="ast" tools:ignore="MissingTranslation" translatable="false">Avg. St</string>
    <string name="amp" tools:ignore="MissingTranslation" translatable="false">Avg. MP</string>
    <string name="legend_AvgST" tools:ignore="MissingTranslation">Avg. St: Average strikes per match</string>

    <string name="ap" tools:ignore="MissingTranslation" translatable="false">Avg. P</string>
    <string name="asp" tools:ignore="MissingTranslation" translatable="false">Avg. Sp</string>
    <string name="legend_AvgSP">Avg. Sp: Average spares per match</string>


    <string name="score">Score</string>
    <string name="so" tools:ignore="MissingTranslation" translatable="false">so</string>
    <string name="ot" tools:ignore="MissingTranslation" translatable="false">ot</string>

    <string name="normal_time" tools:ignore="MissingTranslation">Normal time</string>
    <string name="overtime" tools:ignore="MissingTranslation" translatable="false">Overtime</string>
    <string name="shootouts" tools:ignore="MissingTranslation" translatable="false">Shootouts</string>
    <string name="set_all" tools:ignore="MissingTranslation">All fields need to be set!</string>
    <string name="s" tools:ignore="MissingTranslation" translatable="false">S</string>
    <string name="goals" tools:ignore="MissingTranslation" translatable="false">Goals</string>
    <string name="assists" tools:ignore="MissingTranslation" translatable="false">Assists</string>
    <string name="plus_minus_points" tools:ignore="MissingTranslation" translatable="false">+/- points</string>
    <string name="saves" tools:ignore="MissingTranslation" translatable="false">Saves</string>
    <string name="shootouts_error" tools:ignore="MissingTranslation" translatable="false">Shootouts are checked, match must not be draw!</string>
    <string name="lot" tools:ignore="MissingTranslation" translatable="false">L ot</string>
    <string name="lso" tools:ignore="MissingTranslation" translatable="false">L so</string>
    <string name="wot" tools:ignore="MissingTranslation" translatable="false">W ot</string>
    <string name="wso" tools:ignore="MissingTranslation" translatable="false">W so</string>
    <string name="mp" tools:ignore="MissingTranslation" translatable="false">MP</string>

    <string name="legend" tools:ignore="MissingTranslation" translatable="false">Stats legend:</string>
    <string name="legend_GP" tools:ignore="MissingTranslation">GP: Games played</string>
    <string name="legend_P" tools:ignore="MissingTranslation">P: Points</string>
    <string name="legend_SP" tools:ignore="MissingTranslation">P: Points</string>
    <string name="legend_TW" tools:ignore="MissingTranslation">W: Wins</string>
    <string name="legend_W" tools:ignore="MissingTranslation" translatable="false">W: Wins in normal time</string>
    <string name="legend_Wot" tools:ignore="MissingTranslation" translatable="false">W: Wins in overtime</string>
    <string name="legend_Wso" tools:ignore="MissingTranslation" translatable="false">W: Wins in shootouts</string>
    <string name="legend_TL" tools:ignore="MissingTranslation">L: Losses</string>
    <string name="legend_L" tools:ignore="MissingTranslation" translatable="false">L: Losses in normal time</string>
    <string name="legend_Lot" tools:ignore="MissingTranslation" translatable="false">L: Losses in overtime</string>
    <string name="legend_Lso" tools:ignore="MissingTranslation" translatable="false">L: Losses in shootouts</string>
    <string name="legend_D" tools:ignore="MissingTranslation">D: Draws</string>
    <string name="legend_G" tools:ignore="MissingTranslation" translatable="false">G: Goals scored</string>
    <string name="legend_A" tools:ignore="MissingTranslation" translatable="false">A: Assists</string>
    <string name="legend_S" tools:ignore="MissingTranslation" translatable="false">S: Saves</string>
    <string name="legend_MP" tools:ignore="MissingTranslation">MP: Match points</string>
    <string name="legend_PM" tools:ignore="MissingTranslation" translatable="false">+/-: Plus minus points</string>
    <string name="legend_GAVG" tools:ignore="MissingTranslation" translatable="false">Avg G: Average goals per match</string>
    <string name="legend_PAVG" tools:ignore="MissingTranslation">Avg P: Average points per match</string>
    <string name="legend_MPAVG" tools:ignore="MissingTranslation">Avg MP: Average match points per match</string>
    <string name="legend_note" tools:ignore="MissingTranslation">Change orientation to landscape to show more statistics</string>

    <string name="point_configurations" tools:ignore="Missingtranslation">Point configurations</string>
    <string name="point_configuration_settings">Point configuration settings</string>
    <string name="pcd_input_label">Set number of competing sides:</string>
    <string name="prebaked_label_pc">Number of competing sides:</string>
    <string name="cant_delete_pc">Can\'t delete this.</string>
    <string name="pc_format_violated">Number of competing sides must be a unique decimal bigger than 1!</string>
    <string name="pc_already_exists">Such point configuration already exists!</string>
    <string name="pc_place_label_1">Points for</string>
    <string name="pc_place_label_2">. place:</string>
    <string name="spca_title_fragment">Sides number</string>

    <string name="match_statistics">Statistics</string>
    <string name="participant_overview_label">Match stats:</string>
    <string name="edit_stats_fragment_switch_warning_title">Warning</string>
    <string name="edit_stats_fragment_switch_warning_message">Do you really want to switch to another input mode? All unsaved data will be lost.</string>

    <string name="number_required_warning">Number value required!</string>
    <string name="mpof_frames_played_format_violated">Should be a number between 1 and</string>
    <string name="mpof_score_format_violated">Should be a number between 0 and</string>
    <string name="mpof_score_violated">Such score is invalid!</string>
    <string name="participant_not_played_yet">This participant has not played yet</string>
    <string name="player_not_played_yet">This player has not played yet</string>

    <string name="flf_roll_format_violated">Should be a number between 0 and</string>
    <string name="flf_regular_frame_too_many_pins_error">The total amount of pins knocked down should be between 0 and</string>
    <string name="flf_last_frame_invalid_extra_roll_error">You only get a bonus roll if you had a strike/spare!</string>

    <string name="played_frames_input_label">Played frames:</string>
    <string name="total_score_input_label">Total score:</string>
    <string name="throw_1_input_label">Throw 1:</string>
    <string name="throw_2_input_label">Throw 2:</string>
    <string name="throw_3_input_label">Throw 3:</string>
    <string name="played_frames_label">Played frames:</string>
    <string name="final_score_label">Final score:</string>
    <string name="score_label">Score:</string>
    <string name="strikes_label">St:</string>
    <string name="spares_label">Sp:</string>
    <string name="place_label">#</string>
    <string name="frame_num">Frame #</string>
    <string name="throws_label">Throws:</string>
    <string name="current_score_label">Score:</string>
    <string name="track_individual_throws">Track individual throws</string>
    <string name="are_match_stats_valid">Match data, including partial, is valid for stats</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="simple_stats">Simple stats</string>
    <string name="complex_stats">Complex stats</string>

    <string name="participants">Participants</string>

    <string name="lane">Lane</string>

    <string name="coming_soon_label">This feature is coming soon…</string>
    
    <string name="stat_match_point" tools:ignore="MissingTranslation" translatable="false">MP</string>
    <string name="stat_match_point_average" tools:ignore="MissingTranslation" translatable="false">MP avg.</string>
    <string name="default_win_condition">Default</string>
    <string name="total_points_win_condition">Win by total points</string>
    <string name="win_condition">Win condition</string>
</resources>
