<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/place_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_label"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/final_score_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="10"
                android:layout_marginRight="8dp"/>

            <TextView
                android:id="@+id/participant_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Participant Aaaaaaaaaaa a aaaaaa"
                android:textSize="18sp"
                android:layout_weight="6"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/manage_participant"
                    android:src="@drawable/ic_people_black_24dp"
                    android:tint="@color/colorPrimary"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/score_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/total_score_input_label" />

                <TextView
                    android:id="@+id/as_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="300" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/warning_not_played_yet">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/participant_not_played_yet" />
        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>